--- a/.github/workflows/main_sport-plus-backend.yml
+++ b/.github/workflows/main_sport-plus-backend.yml
@@ -26,12 +26,15 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
+      - name: Zip all files for upload between jobs
+        run: zip --symlinks -r nest.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: nest.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +56,7 @@ jobs:
           app-name: 'sport-plus-backend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_076752468EDF4E3A90C9427389486771 }}
-          package: .
+          package: nest.zip
+          
+      - name: Delete zip file
+        run: rm nest.zip
